tests/typing/bad/testfile-clash_var2-1.scala
class A { var x = 0; var x: Boolean = true }
object Main { def main(args: Array[String]) { } }
